--- a/.gitignore
+++ b/.gitignore
@@ -121,12 +121,7 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+oramnd/
 
 # Spyder project settings
 .spyderproject
